[package]
name = "CaveGameLauncher"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = {version = "2.6.2", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
zip = "0.6.6"
tar = "0.4.38"
flate2 = "1.0.26"
sha2 = "0.10.6"
sha1 = "0.10.5"
hex = "0.4.3"
